Dependency on IniFile corrected.

--- a/Project.toml
+++ b/Project.toml
@@ -8,3 +8,4 @@ JDBC = "6042db11-3c3d-5e84-8dba-9cbf74c9ba48"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
+IniFile = "83e8ac13-25f8-5344-8a64-a9f2b223428f"
