--- a/Project.toml
+++ b/Project.toml
@@ -12,4 +12,17 @@ LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 
-# versions!
+[compat]
+LibPQ          =  "1.5.0"
+DataStructures = "0.17.19"
+Tables         = "1.0.4"
+DataFrames     = "0.21.4"
+IniFile        = "0.5.0"
+JDBC           = "0.5.0"
+LightXML       = "0.9.0"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
