--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ IniFile = "83e8ac13-25f8-5344-8a64-a9f2b223428f"
 LibPQ = "194296ae-ab2e-5f79-8cd4-7183a0a5a0d1"
 LightXML = "9c8b4983-aa76-5018-a973-4c85ecc9e179"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
+Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
 DataFrames = "0.21.4"
