--- a/Project.toml
+++ b/Project.toml
@@ -13,12 +13,12 @@ Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
 
 [compat]
-DataFrames = "0.21.4,1"
+DataFrames = "1.3.6, 2"
 DataStructures = "0.17.19,1"
 IniFile = "0.5.0,1"
-LibPQ = "1.5.0,2"
+LibPQ = "1.5.2,2"
 LightXML = "0.9.0,1"
-Tables = "1.0.4,2"
+Tables = "1.10.1,2"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
